--- a/frontend/index.html
+++ b/frontend/index.html
@@ -274,7 +274,7 @@
         // =========================
         // 0) Render API（改成你的）
         // =========================
-        const API_BASE = "https://d22soilmovemap.onrender.com";
+        const API_BASE = "https://d22-soilmovemap.onrender.com";
 
         // =========================
         // 1) IndexedDB 快取（前端暫存）
