fix render deploy structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -265,7 +265,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
     <!-- KML -> GeoJSON -->
-    <script src="https://unpkg.com/@tmcw/togeojson@6.0.0/dist/togeojson.umd.js"></script>
+    <script src="/static/togeojson.js"></script>
 
     <!-- Proj4 (EPSG:3826 -> 4326) -->
     <script src="https://unpkg.com/proj4@2.9.2/dist/proj4.js"></script>
